Update logo and photo
Update new logo and photo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="container">
         <!-- Logo -->
         <a class="logo" href="{{ "/index.html" | prepend: site.baseurl }}">
-            <img src="{{ "/assets/img/bear.png" | prepend: site.baseurl }}" alt="Logo">
+            <img src="{{ "/assets/img/logo_inverse.jpg" | prepend: site.baseurl }}" alt="Logo">
         </a>
         <!-- End Logo -->
         <!-- Topbar -->
