Add highlight for code
Add new highlight for code

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,5 +34,7 @@
   <!-- CSS Customization -->
   <link rel="stylesheet" href="{{ "/assets/css/custom.css" | prepend: site.baseurl }}">
 
-
+  <!-- Highlight code-->
+  <link rel="stylesheet" href="{{ "/assets/css/prettify.css" | prepend: site.baseurl }}">
+  <script src="{{ "/assets/js/code/prettify.js" | prepend: site.baseurl }}"></script>
 </head>
