--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,13 @@
           });
   </script>
   <script type="text/javascript">$(".breadcrumb li").last().addClass('active');</script>
+  <script>
+    !function ($) {
+      $(function(){
+        window.prettyPrint && prettyPrint()
+      })
+    }(window.jQuery)
+  </script>
   <!--[if lt IE 9]>
       <script src="{{ "/assets/plugins/respond.js" | prepend: site.baseurl }}"></script>
       <script src="{{ "/assets/plugins/html5shiv.js" | prepend: site.baseurl }}"></script>
