--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,32 @@ layout: default
 
     <!-- Right Sidebar -->
     <div class="col-md-3">
+        <!-- Posts -->
+        <div class="posts margin-bottom-40">
+            <div class="headline headline-md"><h2>Recent Entries</h2></div>
+            <ul class="list-unstyled blog-latest-posts margin-bottom-50">
+            {% for post in site.posts offset: 2 limit: 10 %}
+              <li>
+                <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3> 
+                <small>{{ post.date | date: "%b %-d, %Y" }} / {{ post.tags }}</small>
+                <p>{{ post.content | truncatewords:20}}</p>
+              </li>
+            {% endfor %}
+          </ul>
+        </div><!--/posts-->
+        <!-- End Posts -->
+        <!-- Blog Latest Tweets -->
+        <div class="blog-twitter margin-bottom-30">
+            <div class="headline headline-md"><h2>Latest Tweets</h2></div>
+            <div class="blog-twitter-inner">
+                <i class="fa fa-twitter"></i>
+                <a href="https://twitter.com/atolentinou">@{{site.twitter_username}}</a> 
+                At vero eos et accusamus et iusto odio dignissimos. 
+                <a href="#">http://t.co/sBav7dm</a> 
+                <span>5 hours ago</span>
+            </div>
+        </div>
+        <!-- End Blog Latest Tweets -->
     </div>
     <!-- End Right Sidebar -->
   </div><!--/row-->        
