--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
         <div class="posts margin-bottom-40">
             <div class="headline headline-md"><h2>Recent Entries</h2></div>
             <ul class="list-unstyled blog-latest-posts margin-bottom-50">
-            {% for post in site.posts offset: 2 limit: 10 %}
+            {% for post in site.posts limit: 10 %}
               <li>
                 <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3> 
                 <small>{{ post.date | date: "%b %-d, %Y" }} / {{ post.tags }}</small>
