--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}">
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>{{ site.title }}</title>
 
   <!-- Web Fonts -->
   <link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin'>
