--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/custom.css" | prepend: site.baseurl }}">
 
   <!-- Highlight code-->
+  <link rel="stylesheet" href="{{ "/assets/css/syntax.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/css/prettify.css" | prepend: site.baseurl }}">
   <script src="{{ "/assets/js/code/prettify.js" | prepend: site.baseurl }}"></script>
 </head>
