--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,4 +37,12 @@
   <link rel="stylesheet" href="{{ "/assets/css/syntax.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/css/prettify.css" | prepend: site.baseurl }}">
   <script src="{{ "/assets/js/code/prettify.js" | prepend: site.baseurl }}"></script>
+  <style>
+  my-email::after {
+    content: attr(data-domain);
+  }
+  my-email::before {
+    content: attr(data-user) "\0040";
+  }
+</style>
 </head>
