--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,16 @@
     ga('send', 'pageview');
 
   </script>
+  <!-- OneTrust Cookies Consent Notice start for alvarotolentino.github.io -->
+
+  <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js"  type="text/javascript" charset="UTF-8" data-domain-script="063ff0c0-7692-462b-adcf-adb6c4da16b8-test" ></script>
+  <script type="text/javascript">
+    function OptanonWrapper() { }
+  </script>
+  <script type="text/plain" class="optanon-category-C0003">
+    console.log("JavaScript Type Re-Writing");
+  </script>
+  <!-- OneTrust Cookies Consent Notice end for alvarotolentino.github.io -->
   <!--[if lt IE 9]>
       <script src="{{ "/assets/plugins/respond.js" | prepend: site.baseurl }}"></script>
       <script src="{{ "/assets/plugins/html5shiv.js" | prepend: site.baseurl }}"></script>
